# overseer

./: .gitignore  COMPLETE-PROMPT-PACKAGE.md  COMPLETE_FILE_INVENTORY.md  WORKSPACE_AUDIT_REPORT.md  cursor_build_prompt.md  cursor_offline_page_development_setup.md  cursor_task_template.txt
Pombomb-OBS-Overseer/: test-plugin.sh
TopLeftNameLive/: Live Bug _ Beauty - overlays.uno Control App Output.html  Live Bug _ Beauty - overlays.uno Control App.mhtml  PORTABLE_SETUP.md  QUICKSTART.md  TopLeftNameLive.css  clean-builds.sh
TopLeftNameLive/Live Bug _ Beauty - overlays.uno Control App Output_files/: 490.22660350.js  515.5e04a355.js  727.953ab074.js  77.bf6d2d33.js  956.74a3865f.js  964.2ead0ba3.js  css  onairapp.a069a73b.js  output(1).html  output.html  singularplayer.js
TopLeftNameLive/Live Bug _ Beauty - overlays.uno Control App_files/: 119.2cd55aca.js  12.50782aae.js  128.a1a83c7c.js  247.2eb0f706.js  247.css  27.01909b90.js  274.a3d6868a.js  34.3e78194c.js  459.f306fd46.js  4vMucFJ6YCv6a7Oimq4k3v.html  547.0bdf7285.js  761.9f72741d.js  822.29602740.js  878.df5d266d.js  900.4a947c87.js  900.css  953.ec122564.js  967.315295f8.js  analytics.js  app.53efd7b3.js  app.css  app.html  controlapp.7ba60c20.js  css  f.txt  index-BfHa2lDh.css  index-tW8XhPhc.js  offlineapp.06c3a2d9.js  output(1).html  output.html  singular-analytics.js  singularwidget.js  swal.css
TopLeftNameLive/~/.config/obs-studio/overseer-control/: OVERSEER_PLUGIN_MASTER_PLAN.md  STANDALONE-README.md  standalone-control.html
TopLeftNameLive/~/.config/obs-studio/overseer-control/assets/js/: standalone-control.js
TopLeftNameLive/~/.config/obs-studio/overseer-native/: README-NATIVE.md
TopLeftNameLive/~/.config/obs-studio/overseer-native/control/: index.html  script.js
TopLeftNameLive/~/.config/obs-studio/overseer-native/overlays/: big-lower-3rd-output.html  countdown-output.html  live-bug-output.html  logo-output.html  lower-third-output.html
TopLeftNameLive/~/.config/obs-studio/plugins/overseer-control/: README.md
TopLeftNameLive/~/.config/obs-studio/plugins/overseer-plugin/data/: sample-contestants.csv  sample-contestants.txt
TopLeftNameLive/~/.config/obs-studio/plugins/overseer-plugin/data/locale/: en-US.ini
TopLeftNameLive/~/.config/obs-studio/plugins/overseer-plugin/data/web/: control.html
TopLeftNameLive/~/.config/obs-studio/plugins/overseer-plugin/data/web/assets/css/: control.css
TopLeftNameLive/~/.config/obs-studio/plugins/overseer-plugin/data/web/assets/js/: control.js
TopLeftNameLive/~/.local/share/applications/: overseer-control.desktop
TopLeftNameLive/~/Projects/overseer-new-build-files/: CMakeLists.txt  overseer-data.cpp  overseer-data.h  overseer-dock.cpp  overseer-overlay.cpp  overseer-plugin.cpp  overseer-types.h
TopLeftNameLive/~/Projects/overseer-obs-plugin/: CMakeLists.txt  Makefile  README.md  README_POMBOMB.md  build.sh
TopLeftNameLive/~/Projects/overseer-obs-plugin-final/: BUILD_REPORT.md  CMakeLists.txt  README.md  build.sh
TopLeftNameLive/~/Projects/overseer-obs-plugin-final/data/locale/: en-US.ini
TopLeftNameLive/~/Projects/overseer-obs-plugin-final/src/: overseer-dock.h  overseer-plugin.cpp
TopLeftNameLive/~/Projects/overseer-obs-plugin/data/locale/: PBMOBSPLUGINS.code-workspace  en-US.ini
TopLeftNameLive/~/Projects/overseer-obs-plugin/data/overlays/: big-lower-3rd-output.html  countdown-output.html  live-bug-output.html  logo-output.html  lower-third-output.html
TopLeftNameLive/~/Projects/overseer-obs-plugin/src/: overseer-plugin.cpp  test-plugin.cpp
TopLeftNameLive/~/obs-plugins/overseer/: CMakeLists.txt  clean-build.sh  rebuild.sh
TopLeftNameLive/~/obs-plugins/overseer/data/locale/: en-US.ini
TopLeftNameLive/~/obs-plugins/overseer/src/: overseer-data.cpp  overseer-data.h  overseer-dock.cpp  overseer-dock.h  overseer-nested-scene.cpp  overseer-nested-scene.h  overseer-overlay.cpp  overseer-overlay.h  overseer-plugin.cpp  overseer-plugin.h  overseer-types.h
overseer-new-build-files/: CMakeLists.txt  overseer-dock.cpp  overseer-dock.h  overseer-nested-scene.cpp  overseer-nested-scene.h  overseer-overlay.h  overseer-types.h
overseer-obs-plugin/: CMakeLists.txt  DBRM_analysis.txt  Makefile  build.sh  investigation_report.txt  moc_overseer-dock.cpp  overseer-obs-plugin.pro  test_obs.sh
overseer-obs-plugin-final/: CMakeLists.txt  build.sh
overseer-obs-plugin-final/src/: overseer-dock.h  overseer-plugin.cpp
overseer-obs-plugin/src/: minimal-plugin.cpp  overseer-dock.h  overseer-plugin.cpp  test.moc
